--- a/index.html
+++ b/index.html
@@ -422,8 +422,8 @@
             <div class="contact__container container grid">
                <form action="" class="contact__form grid" id="contact-form">
                   <div class="contact__group grid">
-                     <input type="text" name="user_name" placeholder="Names" required class="contact__input">
-                     <input type="email" name="user_email" placeholder="Names" required class="contact__input">
+                     <input type="text" name="user_name" placeholder="Name" required class="contact__input">
+                     <input type="email" name="user_email" placeholder="Email" required class="contact__input">
                   </div>
 
                   <textarea name="user_message" placeholder="Message" class="contact__input contact__area"></textarea>
