--- a/index.html
+++ b/index.html
@@ -408,8 +408,9 @@
                      <h3 class="experience__profession">Graphic Design</h3>
                      <span class="experience__date">Feb 2024 - Jun 2024</span>
                      <p class="experience__description">
-                        Created digital and print visuals—social media graphics, brochures, ads—to boost brand visibility. Designed assets for campaigns, increasing engagement and followership. Ensured brand consistency with reusable templates and guidelines, streamlining design.  
-                     </p>
+Created visual content for digital and print media, increasing brand visibility by 20%.
+● Designed marketing assets using Adobe Creative Suite, boosting engagement resulting in increased
+investments by 12%, Established reusable templates and design guidelines for brand consistency.                     </p>
                   </div>
                </article>
             </div>
