--- a/index.html
+++ b/index.html
@@ -396,21 +396,41 @@
                      <h3 class="experience__profession">UI/UX Design</h3>
                      <span class="experience__date">Jun 2024 - Aug 2024</span>
                      <p class="experience__description">
-                        Led cross-functional teams to create cohesive, user-centered interfaces. Designed wireframes, prototypes, and mockups in Figma, aligning with brand and user needs. Conducted usability testing to refine designs, enhancing engagement and retention. Prioritized user experience, driving impactful design improvements.
+                        ● Designed user-friendly interfaces in collaboration with product managers and developers.<br> 
+                        ● Created wireframes, prototypes, and mock-ups in Figma, ensuring brand alignment, conducted usability testing, improving user engagement by 30%.<br> 
+                        ● Developed UI/UX solutions using HTML, CSS, and JavaScript.<br> 
+
                      </p>
                   </div>
                </article>
 
                <article class="experience__card">
                   <h2 class="experience__company">The HR Mindset</h2>
-
+                  
                   <div class="experience__data">
                      <h3 class="experience__profession">Graphic Design</h3>
                      <span class="experience__date">Feb 2024 - Jun 2024</span>
                      <p class="experience__description">
-Created visual content for digital and print media, increasing brand visibility by 20%.
-● Designed marketing assets using Adobe Creative Suite, boosting engagement resulting in increased
-investments by 12%, Established reusable templates and design guidelines for brand consistency.                     </p>
+                         ● Created visual content for digital and print media, increasing brand visibility by 20%.<br>
+                         ● Designed marketing assets using Adobe Creative Suite, boosting engagement resulting in increased
+                           investments by 12%.<br>
+                         ● Established reusable templates and design guidelines for brand consistency.
+                     </p>
+                  </div>
+               </article>
+
+               <article class="experience__card">
+                  <h2 class="experience__company">Code Studio</h2>
+                  
+                  <div class="experience__data">
+                     <h3 class="experience__profession">Web Developer & UI/UX Dseigner</h3>
+                     <span class="experience__date">Present</span>
+                     <p class="experience__description">
+                         ●	Developed and optimized responsive web applications using JavaScript, React.js, and Tailwind CSS.<br> 
+                         ●	Implemented debouncing in search algorithms, improving search performance by 20%, Assisted in improving website accessibility and SEO best practice.<br> 
+                         ● Integrated REST APIs for dynamic content updates, enhancing page load speed, conducted crossbrowser testing and debugging to ensure a seamless user experience.<br> 
+
+                     </p>
                   </div>
                </article>
             </div>
